--- a/WebcamObjectRecognition/MainWindow.xaml
+++ b/WebcamObjectRecognition/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="WebcamObjectRecognition.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Webcam Object Recognition" Height="600" Width="800">
+        Title="Webcam Object Recognition" Height="635" Width="846">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -18,14 +18,32 @@
         </StackPanel>
 
         <!-- Webcam Feed -->
-        <Image x:Name="WebcamImage" Grid.Row="1" Stretch="Uniform" Margin="10"/>
+        <Image x:Name="WebcamImage" Grid.Row="1" Stretch="Uniform" Margin="29,14,355,175"/>
 
         <!-- Buttons -->
-        <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Center" Margin="10">
-            <Button x:Name="TrainButton" Content="Start Train Mode" Width="120" Margin="5" Click="TrainButton_Click"/>
-            <Button x:Name="CaptureButton" Content="Capture" Width="100" Margin="5" Click="CaptureButton_Click" IsEnabled="False"/>
-            <Button x:Name="DetectButton" Content="Start Detect Mode" Width="120" Margin="5" Click="DetectButton_Click"/>
-            <Button x:Name="StopButton" Content="Stop" Width="100" Margin="5" Click="StopButton_Click"/>
-        </StackPanel>
+        <TabControl Grid.Row="1" Margin="0,432,0,0">
+            <TabItem Header="TabItem">
+                <Grid Background="#FFE5E5E5">
+                    <Button x:Name="TrainButton" Content="Start Train Mode" Margin="187,24,486,24" Click="TrainButton_Click"/>
+                    <Button x:Name="CaptureButton" Content="Capture" Width="100" Margin="420,24,320,24" Click="CaptureButton_Click" IsEnabled="False"/>
+                </Grid>
+            </TabItem>
+            <TabItem Header="TabItem">
+                <Grid Background="#FFE5E5E5">
+                    <Button x:Name="DetectButton" Content="Start Detect Mode" Width="120" Margin="289,19,352,29" Click="DetectButton_Click" Grid.Column="2"/>
+                </Grid>
+            </TabItem>
+            <TabItem Header="Stop">
+                <Grid Background="#FFE5E5E5">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="25*"/>
+                        <ColumnDefinition Width="769*"/>
+                    </Grid.ColumnDefinitions>
+                    <Button x:Name="StopButton" Content="Stop" Width="100" Margin="307,19,362,29" Click="StopButton_Click" Grid.Column="1"/>
+                </Grid>
+            </TabItem>
+        </TabControl>
+        <TextBox HorizontalAlignment="Left" Margin="579,34,0,0" Grid.Row="1" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="221" Height="374" TextChanged="TextBox_TextChanged"/>
+
     </Grid>
 </Window>
