--- a/WebcamObjectRecognition/MainWindow.xaml
+++ b/WebcamObjectRecognition/MainWindow.xaml
@@ -23,10 +23,15 @@
             <TabItem Header="Capture">
                 <Grid Background="#FFE5E5E5">
                     <Grid Margin="0,0,0,10">
-                        <TextBlock Text=" Label: " FontSize="16" Margin="78,19,668,19"/>
-                        <TextBox x:Name="LabelInput" FontSize="16" Margin="203,29,481,10" TextChanged="LabelInput_TextChanged"/>
-                        <Button x:Name="CaptureButton" Content="Capture" Margin="387,28,299,10" Click="CaptureButton_Click" IsEnabled="False"/>
-                        <Button x:Name="FileButton" Content="ShowFiles" HorizontalAlignment="Left" Margin="637,24,0,0" VerticalAlignment="Top" Height="68" Width="154" Click="Files_Click" IsEnabled="False"/>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="65*"/>
+                            <ColumnDefinition Width="11*"/>
+                            <ColumnDefinition Width="764*"/>
+                        </Grid.ColumnDefinitions>
+                        <TextBlock Text=" Label: " FontSize="16" Margin="18,52,0,0" IsEnabled="False" VerticalAlignment="Top" HorizontalAlignment="Left" Grid.Column="2"/>
+                        <TextBox x:Name="LabelInput" FontSize="16" Margin="125,29,489,9" TextChanged="LabelInput_TextChanged" Width="150" Height="70" Grid.Column="2"/>
+                        <Button x:Name="CaptureButton" Content="Capture" Margin="313,28,301,10" Click="CaptureButton_Click" IsEnabled="False" Width="150" Height="70" Grid.Column="2"/>
+                        <Button x:Name="FileButton" Content="ShowFiles" HorizontalAlignment="Left" Margin="506,29,0,0" VerticalAlignment="Top" Height="70" Width="150" Click="Files_Click" IsEnabled="False" Grid.Column="2"/>
                     </Grid>
                 </Grid>
             </TabItem>
@@ -35,9 +40,13 @@
                     <Button x:Name="TrainModel" Content="Train Model" Width="120" Margin="289,19,352,29" Click="Train_Click" Grid.Column="2"/>
                 </Grid>
             </TabItem>
-            <TabItem Header="TabItem">
+            <TabItem Header="Detection">
                 <Grid Background="#FFE5E5E5">
-                    <Button x:Name="DetectButton" Content="Start Detect Mode" Width="120" Margin="289,19,352,29" Click="DetectButton_Click" Grid.Column="2"/>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="61*"/>
+                        <ColumnDefinition Width="359*"/>
+                    </Grid.ColumnDefinitions>
+                    <Button x:Name="DetectButton" Content="Start Detect Mode" Margin="178,38,239,10" Click="DetectButton_Click" Grid.Column="1" Width="150" Height="70"/>
                 </Grid>
             </TabItem>
             <TabItem Header="Stop">
@@ -50,7 +59,7 @@
                 </Grid>
             </TabItem>
         </TabControl>
-        <TextBox x:Name="OutputBox" HorizontalAlignment="Left" Margin="672,19,0,0" Grid.Row="1" TextWrapping="Wrap" VerticalAlignment="Top" Width="154" Height="413" IsEnabled="False"/>
+        <TextBox x:Name="OutputBox" HorizontalAlignment="Left" Margin="521,19,0,0" Grid.Row="1" TextWrapping="Wrap" VerticalAlignment="Top" Width="305" Height="413" IsEnabled="False"/>
 
     </Grid>
 </Window>
