--- a/WebcamObjectRecognition/MainWindow.xaml
+++ b/WebcamObjectRecognition/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="WebcamObjectRecognition.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Webcam Object Recognition" Height="635" Width="846">
+        Title="Webcam Object Recognition" Height="635" Width="846" Closed="Window_Closed">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -22,31 +22,20 @@
         <TabControl Grid.Row="1" Margin="0,432,0,0">
             <TabItem Header="Capture">
                 <Grid Background="#FFE5E5E5">
-                    <Grid Margin="0,0,0,10">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="65*"/>
-                            <ColumnDefinition Width="11*"/>
-                            <ColumnDefinition Width="764*"/>
-                        </Grid.ColumnDefinitions>
-                        <TextBlock Text=" Label: " FontSize="16" Margin="18,52,0,0" IsEnabled="False" VerticalAlignment="Top" HorizontalAlignment="Left" Grid.Column="2"/>
-                        <TextBox x:Name="LabelInput" FontSize="16" Margin="125,29,489,9" TextChanged="LabelInput_TextChanged" Width="150" Height="70" Grid.Column="2"/>
-                        <Button x:Name="CaptureButton" Content="Capture" Margin="313,28,301,10" Click="CaptureButton_Click" IsEnabled="False" Width="150" Height="70" Grid.Column="2"/>
-                        <Button x:Name="FileButton" Content="ShowFiles" HorizontalAlignment="Left" Margin="506,29,0,0" VerticalAlignment="Top" Height="70" Width="150" Click="Files_Click" IsEnabled="False" Grid.Column="2"/>
+                    <TextBlock Text=" Label:"     FontSize="16"         Margin="83,47,697,33" IsEnabled="False" />
+                    <TextBox x:Name="LabelInput" FontSize="16"          Margin="164,28,525,33" TextChanged="LabelInput_TextChanged" Height="50" Width="150"/>
+                    <Button x:Name="CaptureButton" Content="Capture"    Margin="351,28,339,33" Click="CaptureButton_Click" IsEnabled="False" Height="50" />
+                     <Button x:Name="FileButton" Content="ShowFiles"     Margin="536,28,154,33" Click="Files_Click" IsEnabled="False" Height="50"/>
                     </Grid>
-                </Grid>
             </TabItem>
             <TabItem Header="Train" Height="20" VerticalAlignment="Top">
                 <Grid Background="#FFE5E5E5">
-                    <Button x:Name="TrainModel" Content="Train Model" Width="120" Margin="289,19,352,29" Click="Train_Click" Grid.Column="2"/>
+                    <Button x:Name="TrainModel" Content="Train Model" Width="150" Margin="289,19,352,29" Click="Train_Click" Grid.Column="2" Height="50"/>
                 </Grid>
             </TabItem>
             <TabItem Header="Detection">
                 <Grid Background="#FFE5E5E5">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="61*"/>
-                        <ColumnDefinition Width="359*"/>
-                    </Grid.ColumnDefinitions>
-                    <Button x:Name="DetectButton" Content="Start Detect Mode" Margin="178,38,239,10" Click="DetectButton_Click" Grid.Column="1" Width="150" Height="70"/>
+                    <Button x:Name="DetectButton" Content="Start Detect Mode" Margin="307,34,383,34" Click="DetectButton_Click" Width="150" Height="50"/>
                 </Grid>
             </TabItem>
             <TabItem Header="Stop">
@@ -55,10 +44,11 @@
                         <ColumnDefinition Width="25*"/>
                         <ColumnDefinition Width="769*"/>
                     </Grid.ColumnDefinitions>
-                    <Button x:Name="StopButton" Content="Stop" Width="100" Margin="307,19,362,29" Click="StopButton_Click" Grid.Column="1"/>
+                    <Button x:Name="StopButton" Content="Stop" Width="150" Margin="307,19,362,29" Click="StopButton_Click" Grid.Column="1" Height="50"/>
                 </Grid>
             </TabItem>
         </TabControl>
+        
         <TextBox x:Name="OutputBox" HorizontalAlignment="Left" Margin="521,19,0,0" Grid.Row="1" TextWrapping="Wrap" VerticalAlignment="Top" Width="305" Height="413" IsEnabled="False"/>
 
     </Grid>
