--- a/WebcamObjectRecognition/MainWindow.xaml
+++ b/WebcamObjectRecognition/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="WebcamObjectRecognition.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Webcam Object Recognition" Height="635" Width="846" Closed="Window_Closed">
+        Title="Webcam Object Recognition" Height="685" Width="901" Closed="Window_Closed">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -22,10 +22,12 @@
         <TabControl Grid.Row="1" Margin="0,432,0,0">
             <TabItem Header="Capture">
                 <Grid Background="#FFE5E5E5">
-                    <TextBlock Text=" Label:"     FontSize="16"         Margin="83,47,697,33" IsEnabled="False" />
-                    <TextBox x:Name="LabelInput" FontSize="16"          Margin="164,28,525,33" TextChanged="LabelInput_TextChanged" Height="50" Width="150"/>
-                    <Button x:Name="CaptureButton" Content="Capture"    Margin="351,28,339,33" Click="CaptureButton_Click" IsEnabled="False" Height="50" />
-                    <Button x:Name="FileButton" Content="ShowFiles"     Margin="536,28,154,33" Click="Files_Click" IsEnabled="False" Height="50"/>
+                    <TextBlock Text=" Label:"     FontSize="16"    IsEnabled="False" RenderTransformOrigin="1.85,0.347" Margin="179,59,638,59" TextAlignment="Center" />
+                    <TextBox x:Name="LabelInput" FontSize="16"          Height="50" Width="150" TextChanged="LabelInput_TextChanged" Margin="253,34,437,34" />
+                    <Button x:Name="CaptureButton" Content="Capture"    Height="50" Width="150" Click="CaptureButton_Click" IsEnabled="False" Margin="434,34,256,34" />
+                    <Button x:Name="FileButton" Content="ShowFiles"     Height="50" Width="150" Click="Files_Click" IsEnabled="False" Margin="620,34,70,34"/>
+                    <RadioButton Content="FaceDetection" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Checked="RadioButton_Checked"/>
+                    <RadioButton Content="NormalizeToReferenceImage" HorizontalAlignment="Left" Margin="133,11,0,0" VerticalAlignment="Top"/>
                 </Grid>
             </TabItem>
             <TabItem Header="Train" Height="20" VerticalAlignment="Top">
