--- a/WebcamObjectRecognition/MainWindow.xaml
+++ b/WebcamObjectRecognition/MainWindow.xaml
@@ -1,19 +1,8 @@
 ﻿<Window x:Class="WebcamObjectRecognition.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Webcam Object Recognition" Height="685" Width="901" Closed="Window_Closed">
+        Title="Webcam Object Recognition" Height="635" Width="846" Closed="Window_Closed">
     <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="Auto"/>
-        </Grid.RowDefinitions>
-
-        <!-- Status and Input -->
-        <StackPanel Grid.Row="0" Orientation="Horizontal" Margin="10">
-            <TextBlock Text="Status: " FontSize="16"/>
-            <TextBlock x:Name="StatusText" Text="Idle" FontSize="16" Foreground="Green"/>
-        </StackPanel>
 
         <!-- Webcam Feed -->
         <Image x:Name="WebcamImage" Grid.Row="1" Stretch="Uniform" Margin="29,14,355,175" IsEnabled="False"/>
@@ -22,12 +11,12 @@
         <TabControl Grid.Row="1" Margin="0,432,0,0">
             <TabItem Header="Capture">
                 <Grid Background="#FFE5E5E5">
-                    <TextBlock Text=" Label:"     FontSize="16"    IsEnabled="False" RenderTransformOrigin="1.85,0.347" Margin="179,59,638,59" TextAlignment="Center" />
-                    <TextBox x:Name="LabelInput" FontSize="16"          Height="50" Width="150" TextChanged="LabelInput_TextChanged" Margin="253,34,437,34" />
-                    <Button x:Name="CaptureButton" Content="Capture"    Height="50" Width="150" Click="CaptureButton_Click" IsEnabled="False" Margin="434,34,256,34" />
-                    <Button x:Name="FileButton" Content="ShowFiles"     Height="50" Width="150" Click="Files_Click" IsEnabled="False" Margin="620,34,70,34"/>
-                    <RadioButton Content="FaceDetection" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Checked="RadioButton_Checked"/>
-                    <RadioButton Content="NormalizeToReferenceImage" HorizontalAlignment="Left" Margin="133,11,0,0" VerticalAlignment="Top"/>
+                    <TextBlock Text=" Label:"     FontSize="16"         Margin="77,55,663,54" IsEnabled="False" RenderTransformOrigin="1.85,0.347" />
+                    <TextBox x:Name="LabelInput" FontSize="16"          Margin="201,52,489,57" TextChanged="LabelInput_TextChanged"/>
+                    <Button x:Name="CaptureButton" Content="Capture"    Margin="398,52,292,57" Click="CaptureButton_Click" IsEnabled="False" />
+                    <Button x:Name="FileButton" Content="ShowFiles"     Margin="618,52,72,57" Click="Files_Click" IsEnabled="False"/>
+                    <CheckBox x:Name="FaceDetectionCheckbox" Content="FaceDetection" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Checked="RadioButton_Checked" Grid.ColumnSpan="2" Unchecked="FaceDetectionCheckbox_Unchecked"/>
+                    <CheckBox x:Name="RefimageCheckbox" Content="UseRefImage" HorizontalAlignment="Left" Margin="112,10,0,0" VerticalAlignment="Top" Grid.Column="1" Checked="RefimageCheckbox_Checked" Unchecked="RefimageCheckbox_UnChecked"/>
                 </Grid>
             </TabItem>
             <TabItem Header="Train" Height="20" VerticalAlignment="Top">
